--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,9 @@
 	"version": "0.1",
 	"manifest_version": 2,
 	"description": "Track when and what you read online.",
-	"browser_action": { },
+	"browser_action": {
+		"default_popup" : "popup.html"
+	},
 	"background": {
 		"page": "background.html"
 	},
